@@ -1,5 +1,9 @@
 Thu Nov 28 22:33:30 1996  Samuel Tardieu  <sam@inf.enst.fr>
 
+	* two.py: Serial-line connector simulator (connects two sockets).
+
+	* serial.c: Serial-line simulator using sockets.
+
 	* s-gaseli.adb: Optimization.
 
 	* s-garhea.adb: Added debug entries.
